# ckernel

./: README.md  grub.cfg  grub.tar.bz2  meson.build  meson_options.txt
kernel/: meson.build
kernel/arch/x86/: header.asm  io.h  meson.build  puts.asm  tty.c  tty.h
kernel/arch/x86/x32/: boot.asm  crti.asm  crtn.asm  kernel.lds
kernel/arch/x86/x64/: boot.asm  crti.asm  crtn.asm  kernel.lds
kernel/kernel/: main.c  stdio.c  stdio.h
